--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prayer Request</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Prayer Request.css">
 </head>
 <body>
     <div class="prayer-request-container">
@@ -12,25 +12,18 @@
         <form action="/submit-prayer-request" method="POST">
             <div class="form-group">
                 <label for="name">Your Name:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name" required aria-label="Your Name">
             </div>
             <div class="form-group">
                 <label for="email">Your Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required aria-label="Your Email">
             </div>
             <div class="form-group">
                 <label for="prayer_request">Prayer Request:</label>
-                <textarea id="prayer_request" name="prayer_request" required></textarea>
-            </div>
-            <div class="form-group">
-                <label for="pastor_email">Select Pastor:</label>
-                <select id="pastor_email" name="pastor_email" required>
-                    <option value="pastor1@example.com">Pastor 1</option>
-                    <option value="pastor2@example.com">Pastor 2</option>
-                    <!-- Add more pastors as needed -->
-                </select>
+                <textarea id="prayer_request" name="prayer_request" required aria-label="Prayer Request"></textarea>
             </div>
             <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
         </form>
     </div>
 </body>
