--- a/Donations.html
+++ b/Donations.html
@@ -15,6 +15,7 @@
 
         <label for="currency">Currency:</label>
         <select id="currency" name="currency" required>
+            <option value="ZAR">ZAR</option>
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
             <option value="CNY">CNY</option>
