--- a/Home.html
+++ b/Home.html
@@ -19,23 +19,6 @@
             <button onclick="window.location.href='Login.html'">Log out?</button>
         </div>
     </div>
-
-    <div id="chatbot-icon" onclick="toggleChatbot()">
-        💬
-    </div>
-    <div id="chatbot-popup" style="display:none;">
-        <iframe src="chatbot.html" width="300" height="400"></iframe>
-    </div>
-
-    <script>
-        function toggleChatbot() {
-            var chatbotPopup = document.getElementById('chatbot-popup');
-            if (chatbotPopup.style.display === 'none') {
-                chatbotPopup.style.display = 'block';
-            } else {
-                chatbotPopup.style.display = 'none';
-            }
-        }
-    </script>
+    <script>!function(e,t,a){var c=e.head||e.getElementsByTagName("head")[0],n=e.createElement("script");n.async=!0,n.defer=!0, n.type="text/javascript",n.src=t+"/static/js/widget.js?config="+JSON.stringify(a),c.appendChild(n)}(document,"https://app.engati.com",{bot_key:"2344c7cbf6e34de2",welcome_msg:true,branding_key:"default",server:"https://app.engati.com",e:"p" });</script>
 </body>
 </html>
