--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-n9xh+SpAdPCDmTMXsBjqGmUfxx/1p0zx9TA3QxtEiZpGGTEp27f9V4N1I7vRKRuplGB6Ei/6/mXE13p9y4ERug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="Login.css">
     </head>
-<body style="background-image: url('Image 4.webp'); background-repeat: no-repeat; background-size: cover;">
+<body style="background-image: url('93b2cd78-47c8-4253-9060-70f9f06bc0b4.jpg'); margin: 0;
+padding: 0;
+background-size: cover; /* Cover the entire background */
+background-repeat: no-repeat; /* No repeating of background */
+background-attachment: fixed; /* Fixed position */
+background-position: center center; /* Center the background */">
     <div class="home-container">
         <header>
             <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
@@ -37,7 +42,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="Events.html">Word of the day</a></li>
+                <li><a href="Word_of_the_day.html">Word of the day</a></li>
                 <li><a href="AboutUs.html">About Us</a></li> <!-- Added: About Us link -->
                 <li><a href="MemberProfile.html">Member Profile</a></li> <!-- Added: Member Profile link -->
                 <li><a href="MemberProfile.html">Inspiration</a></li> <!-- Added: Member Profile link -->
