--- a/Home.html
+++ b/Home.html
@@ -7,12 +7,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-n9xh+SpAdPCDmTMXsBjqGmUfxx/1p0zx9TA3QxtEiZpGGTEp27f9V4N1I7vRKRuplGB6Ei/6/mXE13p9y4ERug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="Login.css">
     </head>
-<body style="background-image: url('93b2cd78-47c8-4253-9060-70f9f06bc0b4.jpg'); margin: 0;
-padding: 0;
-background-size: cover; /* Cover the entire background */
-background-repeat: no-repeat; /* No repeating of background */
-background-attachment: fixed; /* Fixed position */
-background-position: center center; /* Center the background */">
+<body style="background-image: url('93b2cd78-47c8-4253-9060-70f9f06bc0b4.jpg'); 
+        margin: 0;
+        padding: 0;
+        background-size: cover; /* Cover the entire background */
+        background-repeat: no-repeat; /* No repeating of background */
+        background-attachment: fixed; /* Fixed position */
+        background-position: center center; /* Center the background */">
     <div class="home-container">
         <header>
             <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
@@ -26,16 +27,19 @@ background-position: center center; /* Center the background */">
         </div>
         <div class="options">
             <button onclick="window.location.href='PrayerRequest.html'">Prayer Request <br> 
-                <p class="OptioN-decription">Request a prayer from a Pastor</p></button>
+                <p style="color: aqua; font-size: small;">Request a prayer from a Pastor</p></button>
                
             <button onclick="window.location.href='Shop.html'">Shop Online
-                <br> Shop church Online</button>
+                <br><p style="color: aqua; font-size: small;">Shop online in our church shop</p></button>
+
             <button onclick="window.location.href='Events.html'">Church Events
-                <br> See upcoming events</button>
+                <br><p style="color: aqua; font-size: small;">See upcoming events</p></button>
+
             <button onclick="window.location.href='Donations.html'">Donations
-                <br> Giving</button>
+                <br> <p style="color: aqua; font-size: small;">Giving</p></button>
+
             <button onclick="window.location.href='Chat.html'">Chat
-                <br> Connect with other users</button>
+                <br> <p style="color: aqua; font-size: small;">Connect with other church members</p></button>
         </div>
         </div>
         <div class="logout-container">
