--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,7 @@
             <ul>
                 <li><a href="Word_of_the_day.html">Word of the day</a></li>
                 <li><a href="AboutUs.html">About Us</a></li> <!-- Added: About Us link -->
-                <li><a href="MemberProfile.html">Member Profile</a></li> <!-- Added: Member Profile link -->
+                <li><a href="Member_profile.html">Member Profile</a></li> <!-- Added: Member Profile link -->
                 <li><a href="MemberProfile.html">Inspiration</a></li> <!-- Added: Member Profile link -->
                 <button onclick="window.location.href='Login.html'" class="logout-btn">Log out?</button>
             </ul>
