--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="Prayer Request.css">
 
 </head>
-<body>
+<body style="background-image: url('WhatsApp Image 2024-07-25 at 12.16.48 (1).jpeg'); 
+margin: 0;
+padding: 0;
+background-size: cover; /* Cover the entire background */
+background-repeat: no-repeat; /* No repeating of background */
+background-attachment: fixed; /* Fixed position */
+background-position: center; /* Center the background */">
     <div class="prayer-request-container">
         <h2>Prayer Request</h2>
         <form action="/submit-prayer-request" method="POST">
