--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-n9xh+SpAdPCDmTMXsBjqGmUfxx/1p0zx9TA3QxtEiZpGGTEp27f9V4N1I7vRKRuplGB6Ei/6/mXE13p9y4ERug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="Login.css">
+        <link rel="stylesheet" href="Home.css">
     </head>
 <body style="background-image: url('93b2cd78-47c8-4253-9060-70f9f06bc0b4.jpg'); 
         margin: 0;
@@ -40,6 +40,9 @@
 
             <button onclick="window.location.href='Chat.html'">Chat
                 <br> <p style="color: aqua; font-size: small;">Connect with other church members</p></button>
+
+                <button onclick="window.location.href='Chat.html'">Podcasts
+                    <br> <p style="color: aqua; font-size: small;"></p></button>
         </div>
         </div>
         <div class="logout-container">
