--- a/Login.html
+++ b/Login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Login.css">
 </head>
 <body style="background-image: url('Untitled-design-7.png'); background-size: cover; background-repeat: no-repeat;">
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Welcome to the Church Online App<br><br>Login</h2>
         <form id="login-form">
             <div class="form-group">
                 <label for="username">Username:</label>
