--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,7 @@
             <h1>About Us</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Home.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -24,27 +24,21 @@
 
     <section class="about-section">
         <div class="container">
-            <h2 style="color: cyan;">Our Story</h2>
+            <h2 style="color:#0a0a0a;">Our Story</h2>
             <div class="slideshow-container">
-                <img class="mySlides" src="slide1.jpg">
-                <img class="mySlides" src="slide2.jpg">
-                <img class="mySlides" src="slide3.jpg">
-                <img class="mySlides" src="slide4.jpg">
-                <img class="mySlides" src="slide5.jpg">
+                <img class="mySlides" src="Apostolic-TV-Faith.png">
+                <img class="mySlides" src="WhatsApp Image 2024-07-29 at 14.46.50.jpeg">
+                <img class="mySlides" src="WhatsApp Image 2024-07-24 at 12.43.51.jpeg">
+                <img class="mySlides" src="WhatsApp Image 2024-07-29 at 14.46.51.jpeg">
+                <img class="mySlides" src="Apostolic-TV.jpg">
             </div>
-            <p style="color: aliceblue; text-align: left; font-size: large;">
+            <p style="color:#0a0a0a; text-align: left; font-size: large;">
                 Welcome to [Church Name], a vibrant community of faith dedicated to spreading the love and teachings of Jesus Christ. Nestled in the heart of [City/Town], our church has been a beacon of hope and spiritual growth for over [number] years. At [Church Name], we believe in the power of prayer, the strength found in fellowship, and the transformative grace of God.
                 
                 Our mission is simple yet profound: to create a welcoming environment where individuals and families can deepen their relationship with God and each other. Through inspiring worship services, engaging Bible study groups, and compassionate outreach programs, we strive to serve our community and share the message of God's love. Whether you are exploring your faith for the first time or seeking a church family to grow with, we invite you to join us on this journey of faith, hope, and love at [Church Name].
             </p>
         </div>
     </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Your Company. All rights reserved.</p>
-        </div>
-    </footer>
 
     <script>
         var slideIndex = 0;
@@ -62,5 +56,11 @@
             setTimeout(showSlides, 5000); // Change image every 5 seconds
         }
     </script>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Your Company. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
