--- a/Home.html
+++ b/Home.html
@@ -8,13 +8,7 @@
         <link rel="stylesheet" href="Home.css">
         <a href="javascript:history.back()" class="back-button">← Back</a>
     </head>
-<body style="background-image: url('Home.pic2-transformed.jpeg'); 
-        margin: 0;
-        padding: 0;
-        background-size: cover; /* Cover the entire background */
-        background-repeat: no-repeat; /* No repeating of background */
-        background-attachment: fixed; /* Fixed position */
-        background-position: center center; /* Center the background */">
+<body >
     <div class="home-container">
         <header>
             <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
@@ -28,25 +22,25 @@
         </div>
         <div class="options">
             <button onclick="window.location.href='PrayerRequest.html'">Prayer Request <br> 
-                <p style="color: aqua; font-size: small;">Request a prayer from a Pastor</p></button>
+                <p style="color:  rgb(5, 5, 5); font-size: small;">Request a prayer from a Pastor</p></button>
                
             <button onclick="window.location.href='Shop.html'">Shop Online
-                <br><p style="color: aqua; font-size: small;">Shop online in our church shop</p></button>
+                <br><p style="color:  rgb(5, 5, 5); font-size: small;">Shop online in our church shop</p></button>
 
             <button onclick="window.location.href='Events.html'">Church Events
-                <br><p style="color: aqua; font-size: small;">See upcoming events</p></button>
+                <br><p style="color:  rgb(5, 5, 5); font-size: small;">See upcoming events</p></button>
 
             <button onclick="window.location.href='Donations.html'">Donations
-                <br> <p style="color: aqua; font-size: small;">Giving</p></button>
+                <br> <p style="color:  rgb(5, 5, 5); font-size: small;">Giving</p></button>
 
             <button onclick="window.location.href='Chat.html'">Chat
-                <br> <p style="color: aqua; font-size: small;">Connect with other church members</p></button>
+                <br> <p style="color:  rgb(5, 5, 5); font-size: small;">Connect with other church members</p></button>
 
                 <button onclick="window.location.href='podcast.html'">Podcasts
-                    <br> <p style="color: aqua; font-size: small;">Explore a range of discussions</p></button>
+                    <br> <p style="color:  rgb(5, 5, 5); font-size: small;">Explore a range of discussions</p></button>
 
                 <button onclick="window.location.href='Orders.html'">Orders
-                    <br> <p style="color: aqua; font-size: small;"></p></button>
+                    <br> <p style="color: rgb(5, 5, 5); font-size: small;"></p></button>
         </div>
         </div>
         <div class="logout-container">
