--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -11,14 +11,8 @@
     <!-- Add this back button inside the header -->
 <a href="javascript:history.back()" class="back-button">← Back</a>
 
-<body style="background-image: url('Image 4.webp'); 
-margin: 0;
-padding: 0;
-background-size: cover; /* Cover the entire background */
-background-repeat: no-repeat; /* No repeating of background */
-background-attachment: fixed; /* Fixed position */
-background-position: center; /* Center the background */">
-    <div class="prayer-request-container">
+<body style="background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
+    overflow-y: auto; /* Enable vertical scrolling */">
         <h2>Prayer Request</h2>
         <form action="/submit-prayer-request" method="POST">
             <div class="form-group">
