shop online and other modules changes

--- a/Chat.html
+++ b/Chat.html
@@ -13,7 +13,9 @@
         <h2>Users</h2>
         <ul id="user-list"></ul>
     </div>
-    <button><a href="ChatGroup.html">CREATE GROUP +</a></button>
+     <!-- Add this back button inside the header -->
+     <a href="javascript:history.back()" class="back-button">←Back</a>
+    <button><a href="ChatGroup.html">CREATE GROUP+</a></button>
     <div>
         <div id="chat">
             <h2>Chat with <span id="chat-with">Select a user</span></h2>
