--- a/ChatGroup.Html
+++ b/ChatGroup.Html
@@ -6,6 +6,7 @@
     <title>Chat Application</title>
     <link rel="stylesheet" href="ChatGroup.css">
 </head>
+<a href="javascript:history.back()" class="back-button">←Back</a>
 <body>
     <div id="chat">
         <h2>Chat</h2>
