--- a/Shop.html
+++ b/Shop.html
@@ -7,26 +7,34 @@
     <link rel="stylesheet" href="Shop.css">
 </head>
 <body>
-    <a href="javascript:history.back()" class="back-button">← Back</a>
+    <a href="javascript:history.back()" class="back-button">←Back</a>
     <div class="shop-container">
         <h1>Shop Online</h1>
 
         <div class="category">
             <h2>Music Instruments</h2>
             <div class="product">
-                <img class="product-image" src="feb041f2-5fc9-4e35-b07f-179523fd8174.jpg" alt="Music Instruments">
+                <img class="product-image" src="WhatsApp Image 2024-08-02 at 09.11.51.jpeg" alt="Music Instruments">
                 <div class="product-info">
-                    <h3>Music Instruments</h3>
-                    <p>Price: ZAR 100.00</p>
-                    <button onclick="addToCart('Music Instruments', 100.00)">Add to Cart</button>
+                    <h3>Guitar</h3>
+                    <p>Price: ZAR 1200.00</p>
+                    <button onclick="addToCart('Guitar', 1200.00)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img class="product-image" src="feb041f2-5fc9-4e35-b07f-179523fd8174.jpg" alt="Music Instruments">
+                <img class="product-image" src="WhatsApp Image 2024-08-02 at 09.13.22.jpeg" alt="Music Instruments">
                 <div class="product-info">
-                    <h3>Music Instruments</h3>
-                    <p>Price: ZAR 100.00</p>
-                    <button onclick="addToCart('Music Instruments', 100.00)">Add to Cart</button>
+                    <h3>Grand Piano</h3>
+                    <p>Price: ZAR 2999.00</p>
+                    <button onclick="addToCart('Grand Piano', 2999.00)">Add to Cart</button>
+                </div>
+            </div>
+            <div class="product">
+                <img class="product-image" src="WhatsApp Image 2024-08-02 at 09.16.10.jpeg" alt="Music Instruments">
+                <div class="product-info">
+                    <h3>Drum</h3>
+                    <p>Price: ZAR 900.00</p>
+                    <button onclick="addToCart('Drum', 900.00)">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -34,20 +42,78 @@
         <div class="category">
             <h2>Books</h2>
             <div class="product">
-                <img class="product-image" src="f2fe57b0-30ae-4106-a88c-0b0087df36f0.jpg" alt="Book">
+                <img class="product-image" src="WhatsApp Image 2024-07-24 at 12.43.46.jpeg" alt="Book">
                 <div class="product-info">
-                    <h3>Book</h3>
-                    <p>Price: ZAR 150.00</p>
-                    <button onclick="addToCart('Book', 150.00)">Add to Cart</button>
+                    <h3>My creative bible</h3>
+                    <p>Price: ZAR 500.00</p>
+                    <button onclick="addToCart('My creative bible', 500.00)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
                 <img class="product-image" src="f2fe57b0-30ae-4106-a88c-0b0087df36f0.jpg" alt="Book">
                 <div class="product-info">
-                    <h3>Book</h3>
-                    <p>Price: ZAR 150.00</p>
-                    <button onclick="addToCart('Book', 150.00)">Add to Cart</button>
+                    <h3>Holy bible</h3>
+                    <p>Price: ZAR 300.00</p>
+                    <button onclick="addToCart('Holy bible', 300.00)">Add to Cart</button>
                 </div>
+            </div>
+            <div class="product">
+                <img class="product-image" src="WhatsApp Image 2024-08-02 at 10.30.19.jpeg" alt="Book">
+                <div class="product-info">
+                    <h3>Holy Scriptures</h3>
+                    <p>Price: ZAR 320.00</p>
+                    <button onclick="addToCart('Holy Scriptures', 320.00)">Add to Cart</button>
+                </div>
+            </div>
+            <div class="product">
+                <img class="product-image" src="WhatsApp Image 2024-07-29 at 14.15.58 (1).jpeg" alt="Book">
+                <div class="product-info">
+                    <h3>Diary</h3>
+                    <p>Price: ZAR 80.00</p>
+                    <button onclick="addToCart('Diary', 80.00)">Add to Cart</button>
+                </div>
+            </div><div class="product">
+                <img class="product-image" src="WhatsApp Image 2024-08-02 at 10.44.23.jpeg" alt="Book">
+                <div class="product-info">
+                    <h3>Church note</h3>
+                    <p>Price: ZAR 80.00</p>
+                    <button onclick="addToCart('Church note', 80.00)">Add to Cart</button>
+                </div>
+            </div><div class="product">
+                <img class="product-image" src="WhatsApp Image 2024-08-02 at 10.44.22.jpeg" alt="Book">
+                <div class="product-info">
+                    <h3>Health Diary</h3>
+                    <p>Price: ZAR 80.00</p>
+                    <button onclick="addToCart('Health Diary', 80.00)">Add to Cart</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2>Clothes</h2>
+        <div class="product">
+            <img class="product-image" src="WhatsApp Image 2024-08-02 at 10.58.15 (1).jpeg" alt="Music Instruments">
+            <div class="product-info">
+                <h3>Cap</h3>
+                <p>Price: ZAR 110.00</p>
+                <button onclick="addToCart('Cap', 110.00)">Add to Cart</button>
+            </div>
+        </div>
+        <div class="product">
+            <img class="product-image" src="f1b73064-12b9-46a7-ae1d-11e74baffa66.jpg" alt="Music Instruments">
+            <div class="product-info">
+                <h3>Gold-Shirt</h3>
+                <p>Price: ZAR 160.00</p>
+                <button onclick="addToCart('Gold-Shirt', 160.00)">Add to Cart</button>
+            </div>
+        </div>
+        <div class="product">
+            <img class="product-image" src="WhatsApp Image 2024-08-02 at 10.58.15.jpeg" alt="Music Instruments">
+            <div class="product-info">
+                <h3>Sweater</h3>
+                <p>Price: ZAR 280.00</p>
+                <button onclick="addToCart('Sweater', 280.00)">Add to Cart</button>
             </div>
         </div>
     </div>
