--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="javascript:history.back()" class="back-button">Back</a>
+        <a href="javascript:history.back()" class="back-button">←Back</a>
         <h1>Contact Us</h1>
     </header>
 
