--- a/Channel.html
+++ b/Channel.html
@@ -9,28 +9,29 @@
 <body>
     <div class="channel-container">
         <header>
-            <h1>Channels</h1>
+            <h1>Channel Management</h1>
         </header>
 
-        <select id="channelSelect">
-            <option value="">Select a channel</option>
-        </select>
+        <div class="controls">
+            <select id="channelSelect">
+                <option value="">Select a channel</option>
+            </select>
+            <button id="createNewGroupButton">Create New Group</button>
+        </div>
 
-        <div class="create-channel">
+        <div class="create-channel" style="display: none;">
             <h2>Create a New Channel</h2>
             <input type="text" id="channelName" placeholder="Channel Name" required>
             <button id="createChannelButton">Create Channel</button>
         </div>
 
-                <!-- Add a multi-select dropdown for users -->
-        <div class="add-users-to-channel">
+        <div class="add-users-to-channel" style="display: none;">
             <h2>Add Users to Channel</h2>
             <select id="userSelect" multiple>
                 <!-- Dynamically populated users will go here -->
             </select>
             <button id="addUsersButton">Add Users</button>
         </div>
-
 
         <div class="channel-list">
             <h2>Select a Channel</h2>
@@ -60,6 +61,10 @@
         const channelSelect = document.getElementById('channelSelect');
         const userSelect = document.getElementById('userSelect');
         const addUsersButton = document.getElementById('addUsersButton');
+        const createNewGroupButton = document.getElementById('createNewGroupButton');
+
+        const createChannelDiv = document.querySelector('.create-channel');
+        const addUsersDiv = document.querySelector('.add-users-to-channel');
 
         let selectedChannelId = null; // Variable to store the selected channel ID
 
@@ -179,54 +184,54 @@
         // Load channels on page load
         window.onload = () => {
             fetchChannels();
+            fetchUsers(); // Load users as well
         };
 
+        // Fetch users on page load
+        function fetchUsers() {
+            fetch('/api/users')
+                .then(response => response.json())
+                .then(users => {
+                    userSelect.innerHTML = ''; // Clear previous users
+                    users.forEach(user => {
+                        const option = document.createElement('option');
+                        option.value = user.id;
+                        option.textContent = user.username;
+                        userSelect.appendChild(option);
+                    });
+                });
+        }
 
-// Fetch users on page load
-function fetchUsers() {
-    fetch('/api/users')
-        .then(response => response.json())
-        .then(users => {
-            userSelect.innerHTML = ''; // Clear previous users
-            users.forEach(user => {
-                const option = document.createElement('option');
-                option.value = user.id;
-                option.textContent = user.username;
-                userSelect.appendChild(option);
-            });
-        });
-}
+        // Add users to the selected channel
+        addUsersButton.addEventListener('click', () => {
+            const selectedOptions = Array.from(userSelect.selectedOptions);
+            const userIds = selectedOptions.map(option => option.value);
 
-// Add users to the selected channel
-addUsersButton.addEventListener('click', () => {
-    const selectedOptions = Array.from(userSelect.selectedOptions);
-    const userIds = selectedOptions.map(option => option.value);
-
-    if (selectedChannelId && userIds.length > 0) {
-        fetch(`/api/channels/${selectedChannelId}/members`, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ userIds })
-        })
-        .then(response => {
-            if (response.ok) {
-                alert('Users added to channel successfully!');
+            if (selectedChannelId && userIds.length > 0) {
+                fetch(`/api/channels/${selectedChannelId}/members`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ userIds })
+                })
+                .then(response => {
+                    if (response.ok) {
+                        alert('Users added to channel successfully!');
+                    } else {
+                        alert('Error adding users to channel.');
+                    }
+                });
             } else {
-                alert('Error adding users to channel.');
+                alert('Please select a channel and at least one user.');
             }
         });
-    } else {
-        alert('Please select a channel and at least one user.');
-    }
-});
 
-// Load users on page load
-window.onload = () => {
-    fetchChannels();
-    fetchUsers(); // Load users as well
-};
+        // Toggle visibility of create channel and add users sections
+        createNewGroupButton.addEventListener('click', () => {
+            createChannelDiv.style.display = createChannelDiv.style.display === 'none' ? 'block' : 'none';
+            addUsersDiv.style.display = addUsersDiv.style.display === 'none' ? 'block' : 'none';
+        });
     </script>
 </body>
 </html>
