Improve the Post Scripture modal

--- a/Signup.html
+++ b/Signup.html
@@ -9,6 +9,7 @@
 <body>
     <div class="signup-container">
         <h2>Sign Up</h2>
+        <a href="javascript:history.back()" class="back-button">←Back</a>
         <form id="signup-form" action="/signup" method="POST">
             <div class="form-group">
                 <label for="username">Username:</label>
